--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.6"
   },
@@ -37,6 +38,7 @@
     "@types/mongoose": "^5.7.29",
     "@types/multer": "^1.4.3",
     "@types/node": "^14.0.14",
+    "@types/nodemailer": "^6.4.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.50"
   }
